feat: import and export points feature

--- a/src/pages/canvas/canvas.html
+++ b/src/pages/canvas/canvas.html
@@ -10,9 +10,9 @@
     <div class="rewind-container">
       <button id="undo-button"> <i class="material-icons">undo</i> </button>
       <div>
-        <button> <i class="material-icons">save</i> </button>
+        <button id="save-button"> <i class="material-icons">save</i> </button>
         <button> <i class="material-icons">home</i> </button>
-        <button> <i class="material-icons">folder_open</i> </button>
+        <button id="load-button"> <i class="material-icons">folder_open</i> </button>
       </div>
       <button id="redo-button"> <i class="material-icons">redo</i> </button>
     </div>
