--- a/src/pages/canvas/canvas.html
+++ b/src/pages/canvas/canvas.html
@@ -4,6 +4,7 @@
   <title>Desenhar Pontos na Imagem</title>
   <link rel="stylesheet" href="canvas.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <meta charset="UTF-8">
 </head>
 <body>
   <div class="image-editor-container">
