--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,16 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" width="device-width, initial-scale=1">
 	<title>TrafficManagement</title>
-
 	<link rel="stylesheet" type="text/css" href="home.css" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-
 </head>
 <body>
 
 	<section class="hero">
 		<header>
-			<div class="container">
+			<div class="headerContainer">
 				<div class="logo">
 					<h2><a href="#"><span></span>TrafficManagement</a></h2>
 				</div>
